--- a/ML.ipynb
+++ b/ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "d8c2a762",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "93dcc734",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "6eee079b",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "(53, 6)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "5e1586e5",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4           5  22.0  Female  45000.0             65          1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "id": "f8aaf337",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "eabe1fa4",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "9384d477",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "7816ac13",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "id": "d37290c3",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "id": "19546160",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "id": "77d63382",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "id": "3336e01d",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "8dcc16eb",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "Name: Gender Encoded , dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "id": "0ba8dbbe",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "Index(['CustomerID', 'Age', 'Gender', 'Income', 'SpendingScore', 'Purchased'], dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "id": "e6a11427",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "Name: Gender Encoded , dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "id": "2d82fee7",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
        "4                0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,8 +611,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "95dc3891",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "d1320a3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(\"Purchased\", axis=1)\n",
+    "y = df[\"Purchased\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "dde51e10",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +641,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform\n\u001b[0;32m      4\u001b[0m scale\u001b[38;5;241m=\u001b[39mMinMaxScaler()\n\u001b[1;32m----> 5\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform()\n",
+      "Cell \u001b[1;32mIn[56], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler,MinMaxScaler\n\u001b[0;32m      2\u001b[0m scale\u001b[38;5;241m=\u001b[39mStandardScaler()\n\u001b[1;32m----> 3\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform()\n\u001b[0;32m      4\u001b[0m scale\u001b[38;5;241m=\u001b[39mMinMaxScaler()\n\u001b[0;32m      5\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform(X)\n",
       "\u001b[1;31mTypeError\u001b[0m: TransformerMixin.fit_transform() missing 1 required positional argument: 'X'"
      ]
     }
@@ -630,18 +649,20 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler,MinMaxScaler\n",
     "scale=StandardScaler()\n",
-    "x_scale=scale.fit_transform\n",
+    "x_scale=scale.fit_transform()\n",
     "scale=MinMaxScaler()\n",
-    "x_scale=scale.fit_transform()"
+    "x_scale=scale.fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dde51e10",
+   "id": "03e2ec19",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScaler,MinMaxScaler\n"
+   ]
   }
  ],
  "metadata": {
