--- a/ML.ipynb
+++ b/ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "d8c2a762",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "93dcc734",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "6eee079b",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "(53, 6)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "5e1586e5",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4           5  22.0  Female  45000.0             65          1"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "f8aaf337",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "eabe1fa4",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "9384d477",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "7816ac13",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "d37290c3",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "19546160",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "77d63382",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "3336e01d",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "8dcc16eb",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "Name: Gender Encoded , dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "0ba8dbbe",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "Index(['CustomerID', 'Age', 'Gender', 'Income', 'SpendingScore', 'Purchased'], dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "e6a11427",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "Name: Gender Encoded , dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "2d82fee7",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
        "4                0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "id": "d1320a3f",
    "metadata": {},
    "outputs": [],
@@ -630,10 +630,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "dde51e10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "TransformerMixin.fit_transform() missing 1 required positional argument: 'X'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler,MinMaxScaler\n\u001b[0;32m      2\u001b[0m scale\u001b[38;5;241m=\u001b[39mStandardScaler()\n\u001b[1;32m----> 3\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform()\n\u001b[0;32m      4\u001b[0m scale\u001b[38;5;241m=\u001b[39mMinMaxScaler()\n\u001b[0;32m      5\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform(X)\n",
+      "\u001b[1;31mTypeError\u001b[0m: TransformerMixin.fit_transform() missing 1 required positional argument: 'X'"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import StandardScaler,MinMaxScaler\n",
     "scale=StandardScaler()\n",
@@ -644,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "03e2ec19",
    "metadata": {},
    "outputs": [
@@ -732,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "f6463c95",
    "metadata": {},
    "outputs": [
@@ -813,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "ac5657f7",
    "metadata": {},
    "outputs": [
@@ -884,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "f8d13057",
    "metadata": {},
    "outputs": [
@@ -952,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "a424f78b",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "1fc555f3",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "1647e693",
    "metadata": {},
    "outputs": [],
@@ -1071,19 +1083,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "149d231b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction for 8 is 5.653846153846154\n"
+     ]
+    }
+   ],
    "source": [
+    "# Import libraries\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "model=LinearRegression()"
+    "import numpy as np\n",
+    "\n",
+    "# Example data (x should be 2D, y can be 1D)\n",
+    "# Let's say you have x as a list of numbers and y as their corresponding outputs\n",
+    "x = np.array([[1], [8], [12], [10], [12]])  # x must be 2D\n",
+    "y = np.array([2, 4, 6, 8, 10])          # y can be 1D\n",
+    "\n",
+    "# Create the Linear Regression model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Train (fit) the model\n",
+    "model.fit(x, y)\n",
+    "\n",
+    "# Predict for a new value\n",
+    "value = 8\n",
+    "prediction = model.predict([[value]])  # input must be 2D\n",
+    "print(\"Prediction for\", value, \"is\", prediction[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7a7bd420",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction for 8 is 5.653846153846154\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import libraries\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import numpy as np\n",
+    "\n",
+    "# Example data (x should be 2D, y can be 1D)\n",
+    "# Let's say you have x as a list of numbers and y as their corresponding outputs\n",
+    "x = np.array([[1], [8], [12], [10], [12]])  # x must be 2D\n",
+    "y = np.array([2, 4, 6, 8, 10])          # y can be 1D\n",
+    "\n",
+    "# Create the Linear Regression model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Train (fit) the model\n",
+    "model.fit(x, y)\n",
+    "\n",
+    "# Predict for a new value\n",
+    "value = 8\n",
+    "prediction = model.predict([[value]])  # input must be 2D\n",
+    "print(\"Prediction for\", value, \"is\", prediction[0])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a7bd420",
+   "id": "6f0a9a31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd272c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34d1237a",
    "metadata": {},
    "outputs": [],
    "source": []
