--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "7a7bd420",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction for 8 is 5.653846153846154\n"
+      "Prediction for 8 is [100.] marks \n"
      ]
     }
    ],
@@ -1136,10 +1136,9 @@
     "from sklearn.linear_model import LinearRegression\n",
     "import numpy as np\n",
     "\n",
-    "# Example data (x should be 2D, y can be 1D)\n",
-    "# Let's say you have x as a list of numbers and y as their corresponding outputs\n",
-    "x = np.array([[1], [8], [12], [10], [12]])  # x must be 2D\n",
-    "y = np.array([2, 4, 6, 8, 10])          # y can be 1D\n",
+    "\n",
+    "x = np.array([[1], [2], [3], [4], [5]])  # x must be 2D\n",
+    "y = np.array([30, 40, 50, 60, 70])          # y can be 1D\n",
     "\n",
     "# Create the Linear Regression model\n",
     "model = LinearRegression()\n",
@@ -1147,10 +1146,9 @@
     "# Train (fit) the model\n",
     "model.fit(x, y)\n",
     "\n",
-    "# Predict for a new value\n",
-    "value = 8\n",
-    "prediction = model.predict([[value]])  # input must be 2D\n",
-    "print(\"Prediction for\", value, \"is\", prediction[0])\n"
+    "hours=int(input(\"Enter number of hours\"))\n",
+    "prediction = model.predict([[hours]])  # input must be 2D\n",
+    "print(\"Prediction for\", hours, \"is\", prediction,'marks ')\n"
    ]
   },
   {
