adding Logistic regression

--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1118,6 +1118,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b6ff0cf",
+   "metadata": {},
+   "source": [
+    "Linear Regression\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7a7bd420",
@@ -1152,9 +1160,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7735e7ec",
+   "metadata": {},
+   "source": [
+    "logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431fcb1c",
+   "metadata": {},
+   "source": [
+    "classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6f0a9a31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "based on  3 hours you are likely failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import libraries\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "x = np.array([[1], [2], [3], [4], [5]])  \n",
+    "y=np.array([0,0,0,1,1])\n",
+    "model=LogisticRegression()\n",
+    "model.fit(x,y)\n",
+    "hours=int(input(\"Enter number of hours\"))\n",
+    "result = model.predict([[hours]])  # input must be 2D\n",
+    "if result==1:\n",
+    "    print(f\"based on  {hours} hours you are likely pass\")\n",
+    "else:\n",
+    "    print(f\"based on  {hours} hours you are likely failed\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f0a9a31",
+   "id": "2275dd0c",
    "metadata": {},
    "outputs": [],
    "source": []
