--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6f0a9a31",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "based on  3 hours you are likely failed\n"
+      "result is 0\n",
+      "based on  3.0 hours you are likely failed\n"
      ]
     }
    ],
@@ -1199,8 +1200,9 @@
     "y=np.array([0,0,0,1,1])\n",
     "model=LogisticRegression()\n",
     "model.fit(x,y)\n",
-    "hours=int(input(\"Enter number of hours\"))\n",
-    "result = model.predict([[hours]])  # input must be 2D\n",
+    "hours=float(input(\"Enter number of hours\"))\n",
+    "result = model.predict([[hours]])[0] # input must be 2D\n",
+    "print(\"result is\",result)\n",
     "if result==1:\n",
     "    print(f\"based on  {hours} hours you are likely pass\")\n",
     "else:\n",
@@ -1208,12 +1210,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f634afbc",
+   "metadata": {},
+   "source": [
+    "KNNS REGRESSION"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2275dd0c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "based on  100.0and 1.0 it is  likely apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "x=[\n",
+    "    [180,7],\n",
+    "    [200,7.5],\n",
+    "    [250,8.5],\n",
+    "    [300,9],\n",
+    "    [330,9.5],\n",
+    "]\n",
+    "y=[0,0,0,1,1]\n",
+    "model=KNeighborsClassifier(n_neighbors=3)\n",
+    "model.fit(x,y)\n",
+    "weight=float(input(\"enter the weight in grams\"))\n",
+    "size=float(input(\"enter the size in cm\"))\n",
+    "prediction=model.predict([[weight,size]])[0]\n",
+    "if prediction==1:\n",
+    "    print(f\"based on  {weight}and {size} it is  likely orange\")\n",
+    "else:\n",
+    "    print(f\"based on  {weight}and {size} it is  likely apple\")\n"
+   ]
   },
   {
    "cell_type": "code",
