--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1253,12 +1253,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f22f0d7b",
+   "metadata": {},
+   "source": [
+    "Descion Tree"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bd272c8f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "based onit is  likely apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "x=[\n",
+    "    [7,2],\n",
+    "    [8,3],\n",
+    "    [9,7],\n",
+    "    [10,8]\n",
+    "]\n",
+    "y=[0,0,1,1]\n",
+    "model=DecisionTreeClassifier()\n",
+    "model.fit(x,y)\n",
+    "shade=float(input(\"enter the weight in \"))\n",
+    "size=float(input(\"enter the size in cm\"))\n",
+    "prediction=model.predict([[size,shade]])[0]\n",
+    "if prediction==1:\n",
+    "    print(f\"based on  it is  likely orange\")\n",
+    "else:\n",
+    "    print(f\"based onit is  likely apple\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
