--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1301,7 +1301,11 @@
    "id": "34d1237a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score\n",
+    "y_true=[1,0,0,1,1,0]\n",
+    "x_pred=[0,1,0,1,0,1]\n"
+   ]
   }
  ],
  "metadata": {
