--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1297,15 +1297,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "34d1237a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurracy 0.5\n",
+      "precision 0.5\n",
+      "recall 0.3333333333333333\n",
+      "f1 0.4\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score\n",
     "y_true=[1,0,0,1,1,0]\n",
-    "x_pred=[0,1,0,1,0,1]\n"
+    "x_pred=[0,1,0,1,0,0]\n",
+    "print(\"Acurracy\",accuracy_score(y_true,x_pred))\n",
+    "print(\"precision\",precision_score(y_true,x_pred))\n",
+    "print(\"recall\",recall_score(y_true,x_pred))\n",
+    "print(\"f1\",f1_score(y_true,x_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "179b6825",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
